# course-axum-ui

./: .gitignore  Cargo.toml  README.md
axum-rendering/: Cargo.toml
axum-rendering/src/: lib.rs  main.rs
axum-rendering/src/handler/: mod.rs  pure.rs  router.rs  tpl.rs
axum-rendering/templates/: find_user.html  list_user.html
db/: Cargo.toml
db/src/: model.rs
front-back-separation/: Cargo.toml
front-back-separation-ui/: Makefile  index.html  package.json  pnpm-lock.yaml  vite.config.ts
front-back-separation-ui/src/: index.css  main.tsx  router.tsx
front-back-separation-ui/src/components/: Layout.tsx
front-back-separation-ui/src/pages/: FindUser.tsx  ListUser.tsx
front-back-separation-ui/src/types/: resp.d.ts  user.d.ts
front-back-separation/src/: asset.rs  err.rs  handler.rs  lib.rs  main.rs  resp.rs
front-back-separation/ui/: index.html
front-back-separation/ui/assets/: index-BLALyz1j.js  index-Dtt5io4o.css
hydration-ui/: next.config.ts  package.json
hydration-ui/.next/dev/: prerender-manifest.json  trace
hydration-ui/.next/dev/cache/: .rscinfo
hydration-ui/.next/dev/server/: middleware.js  server-reference-manifest.js  server-reference-manifest.json
hydration-ui/.next/dev/server/app/: page.js  page_client-reference-manifest.js
hydration-ui/.next/dev/server/chunks/: 0jqu_next_0v_rs10._.js  0jqu_next_0v_rs10._.js.map  (+5 more)
hydration-ui/.next/dev/types/: routes.d.ts  validator.ts
hydration-ui/app/: globals.css  layout.tsx  page.tsx
hydration-ui/app/[id]/: page.tsx
hydration-ui/components/: PageTitle.tsx
src/: state.rs
(+185 files in other folders)
