[package]
name = "front-back-separation"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio.workspace = true
axum.workspace = true
anyhow.workspace = true
serde.workspace = true
sqlx.workspace = true
chrono.workspace = true
db = { path = "../db" }
axum_ui = { path = "../" }
rust-embed = "8.11.0"
mime_guess = "2.0.5"
